--- a/style/style.css
+++ b/style/style.css
@@ -19,7 +19,7 @@ body{
     margin: 0 auto;
 }
 
-.header_flex, .footer_flex, .about{
+.header_flex, .footer_flex, .about, .subscribe, .plan_flex{
     display: flex;
     justify-content: space-between;
     align-items:center ;
@@ -124,6 +124,115 @@ margin-left: 35px;
 .container-f{
     max-width: 1070px;
     margin: 0 auto;
+}
+
+.subscribe{
+margin-bottom: 85px;
+}
+
+.subscribe_h2{
+    font-weight: bolt;
+    font-size: 50px;
+    line-height: 57px;
+    letter-spacing: -1.56316px;
+    color: #19191B;
+    margin-bottom: 38px;
+}
+
+.input{
+    width: 302px;
+    height: 60px;
+    border-radius: 10px;
+    border: 1px solid #5454D4;
+    padding-left: 14px;
+    box-sizing: border-box;
+    margin-right: 39px;
+}
+
+.input::placeholder, .input{
+    font-weight: bold;
+    font-size: 17px;
+    line-height: 22px;
+    letter-spacing: -0.531474px;
+    color: #000000;
+}
+
+.input:focus{
+outline: none;
+}
+
+.plan{
+    margin-bottom: 132px;
+}
+
+.plan_h2{
+    font-weight: bold;
+    font-size: 60px;
+    line-height: 70px; 
+    letter-spacing: -1.87579px;
+    color: #19191B;  
+    max-width: 504px;
+    margin-bottom: 110px;
+}
+
+.item{
+    width: 330px;
+    background: #e9ecf5;
+    border-radius: 10px;
+    text-align: center;
+    padding: 34px 0 27px;
+}
+
+.item:hover{
+    background: #FF7143;
+    box-shadow: 0px 32px 34px rgba(255, 112, 59, 0.317827);
+    transition: 300ms;
+}
+
+.item_p{
+    font-size: 18px;
+    line-height: 28px;
+    letter-spacing: -0.562737px;
+    color: #696871;
+}
+
+.item:hover .item_h3, .item:hover .item_p, .item:hover .item_li{
+    color: white;
+    transition: 300ms;
+}
+
+.item_h3{
+    font-weight: bold;
+    font-size: 60px;
+    line-height: 56px;
+    letter-spacing: -1.03448px;
+    color: #1D293F;
+    margin: 22px 0 28px;
+}
+
+.item_h3 span{
+    font-size: 28px;
+}
+
+.item_li{
+    list-style: none;
+    font-size: 18px;
+    line-height: 28px;
+    letter-spacing: -0.562737px;
+    color: #696871;
+}
+
+.button_item{
+    width: 285px;
+    background: white;
+    color:#5454D4 ;
+    margin-top: 36px;
+}
+
+.item:hover .button_item{
+    color: white;
+    transition: 300ms;
+    background-color:#9F3919
 }
 
 /*.footer_flex{
